# pykitx

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
src/pykit/: cli.py  info.py  scaffolder.py
src/pykit/templates/: README.md.tmpl  fastapi_404.html.tmpl  fastapi_app_js.tmpl  fastapi_base.html.tmpl  fastapi_styles.css.tmpl  flask_404.html.tmpl  flask_app_js.tmpl  flask_base.html.tmpl  flask_styles.css.tmpl  gitignore.tmpl  licenses.json  logo.svg.tmpl  main_cli_stdlib.py.tmpl  main_cli_typer.py.tmpl  main_web_fastapi.py.tmpl  main_web_flask.py.tmpl  pyproject.toml.tmpl
src/pykitx.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
